improved the about section and added linked in and github icon

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 </ul>
             </div>
             <div class="nav-button">
-                <button class="btn">download cv <i class="uil uil-file-alt"></i></button>
+                <a href="https://github.com/yourusername" target="_blank" class="btn no-underline">
+                    <i class="uil uil-github"></i> GitHub
+                </a>
             </div>
             <div class="nav-menu-btn"><i class="uil uil-bars" onclick="myMenuFunction()"></i></div>
         </nav>
@@ -60,7 +62,11 @@
                     </div>
                     <div class="featured-text-btn">
                         <button class="btn blue-btn">Hire me</button>
-                        <button class="btn">download cv <i class="uil uil-file-alt"></i></button>
+                        <a href="https://www.linkedin.com/in/sakariye-mohamud-28969b33a/" target="_blank" class="social-btn">
+                            <i class="uil uil-linkedin"></i>
+                            <span>LinkedIn</span>
+                        </a>
+
                     </div>
                     <div class="social-icons">
                         <div class="icons"><i class="uil uil-instagram"></i></div>
@@ -90,11 +96,22 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <div class="about-info">
-                            <h3>my introduction</h3>
-                            <p>I am well-versed in HTML, CSS, and JavaScript, and other cutting-edge frameworks and libraries, which allows me to implement interactive features. Additionally, I have experience working with content management systems (CMS) like WordPress.</p>
-                            <div class="about-btn">
-                                <button class="btn"> download cv <i class="uil uil-import"></i></button>
+                        <div class="intro-section">
+                            <div class="about-info">
+                                <h3>my introduction</h3>
+                                <p>I am well-versed in HTML, CSS, and JavaScript, and other cutting-edge frameworks and libraries, which allows me to implement interactive features. Additionally, I have experience working with content management systems (CMS) like WordPress.</p>
+                                <div class="about-btn">
+                                    <div class="social-links">
+                                        <a href="https://github.com/dhacar" target="_blank" class="social-btn">
+                                            <i class="uil uil-github"></i>
+                                            <span>GitHub</span>
+                                        </a>
+                                        <a href="https://www.linkedin.com/in/sakariye-mohamud-28969b33a/" target="_blank" class="social-btn">
+                                            <i class="uil uil-linkedin"></i>
+                                            <span>LinkedIn</span>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -104,16 +121,16 @@
                                 <h3>frontend</h3>
                             </div>
                             <div class="skills-list">
-                                <span>HTML</span>
-                                <span>CSS</span>
-                                <span>JavaScript</span> 
-                                <span>GitHub</span>
+                                <span style="--i:1">HTML</span>
+                                <span style="--i:2">CSS</span>
+                                <span style="--i:3">JavaScript</span>
+                                <span style="--i:4">GitHub</span>
                             </div>
                         </div>
                         <div class="experience">
-                            <i class="uil uil-award"></i>
+                            <i class="uil uil-award" aria-hidden="true"></i>
                             <h3>experience</h3>
-                            <label>5+ years in tech industry </label>
+                            <label>5+ years in tech industry</label>
                         </div>
                     </div>
                 </div>
