added a new projects section that fetchs projects from my github profile using github api

--- a/index.html
+++ b/index.html
@@ -140,26 +140,9 @@
               <section class="section" id="projects">
                 <div class="top-header">
                     <h1>projects</h1>
-
                 </div>
-                <div class="project-container">
-                    <div class="project-box">
-                        <i class="uil uil-briefcase-alt"></i>
-                        <h3>Completed</h3>
-                        <label>5+ projects </label>
-                    </div>
-
-                    <div class="project-box">
-                        <i class="uil uil-users-alt"></i>
-                        <h3>clients</h3>
-                        <label>3+ happy clients </label>
-                    </div>
-
-                    <div class="project-box">
-                        <i class="uil uil-award"></i>
-                        <h3>experience</h3>
-                        <label>5+ years in tech industry </label>
-                    </div>
+                <div class="project-container" id="repo-list">
+                    <!-- Repositories will be loaded here dynamically -->
                 </div>
               </section>
               
