--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </ul>
             </div>
             <div class="nav-button">
-                <a href="https://github.com/yourusername" target="_blank" class="btn no-underline">
+                <a href="https://github.com/dhacar" target="_blank" class="btn no-underline">
                     <i class="uil uil-github"></i> GitHub
                 </a>
             </div>
@@ -200,10 +200,10 @@
                 </ul>
             </div>
             <div class="footer-social-icons">
-                    <div class="icons"><i class="uil uil-instagram"></i></div>
-                    <div class="icons"><i class="uil uil-youtube"></i></div>
-                    <div class="icons"><i class="uil uil-linkedin-alt"></i></div>
-                    <div class="icons"><i class="uil uil-github-alt"></i></div>
+                    <a href="https://www.instagram.com/ibnu_dhacar/" target="_blank" class="icons"><i class="uil uil-instagram"></i></a>
+                    <a href="https://www.youtube.com/@dhacarseason" target="_blank" class="icons"><i class="uil uil-youtube"></i></a>
+                    <a href="https://www.linkedin.com/in/sakariye-mohamud-28969b33a/" target="_blank" class="icons"><i class="uil uil-linkedin-alt"></i></a>
+                    <a href="https://github.com/dhacar" target="_blank" class="icons"><i class="uil uil-github-alt"></i></a>
             </div>
             <div class="bottom-footer">
                 <p>copyright &copy; <a href="home" style="text-decoration: none , ;">Dhacar Space</a> - all rights riserved</p>
