added local storage to the contact form

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 
                     </div>
                     <div class="social-icons">
-                        <div class="icons"><i class="uil uil-instagram"></i></div>
-                        <div class="icons"><i class="uil uil-youtube"></i></div>
-                        <div class="icons"><i class="uil uil-linkedin-alt"></i></div>
-                        <div class="icons"><i class="uil uil-github-alt"></i></div>
+                        <a href="https://www.instagram.com/ibnu_dhacar/" target="_blank" class="icons"><i class="uil uil-instagram"></i></a>
+                        <a href="https://www.youtube.com/@dhacarseason" target="_blank" class="icons"><i class="uil uil-youtube"></i></a>
+                        <a href="https://www.linkedin.com/in/sakariye-mohamud-28969b33a/" target="_blank" class="icons"><i class="uil uil-linkedin-alt"></i></a>
+                        <a href="https://github.com/dhacar" target="_blank" class="icons"><i class="uil uil-github-alt"></i></a>
                     </div>
 
                 </div>
