--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="row">
                        <div class="col">
                           <div class="contact-info">
-                              <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
+                              <h2>Find ME <i class="uil uil-corner-right-down"></i></h2>
                               <p><i class="uil uil-envelope"></i> Email: ibnudhacar1@gmail.com</p>
                               <p><i class="uil uil-phone"></i> Tel: +252 616 980 777</p>
                           </div>
