--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <a href="https://github.com/dhacar" target="_blank" class="icons"><i class="uil uil-github-alt"></i></a>
             </div>
             <div class="bottom-footer">
-                <p>copyright &copy; <a href="home" style="text-decoration: none , ;">Dhacar Space</a> - all rights riserved</p>
+                <p>copyright &copy; <a href="#home" style="text-decoration: none , ;">Dhacar Space</a> - all rights riserved</p>
             </div>
 
         </footer>
